@@ -183,6 +183,7 @@ The following bugs are resolved with this release:
   [25423] Array overflow in backtrace on powerpc
   [25487] sinl() stack corruption from crafted input (CVE-2020-10029)
   [25620] libc: Signed comparison vulnerability in the ARMv7 memcpy() (CVE-2020-6096)
+  [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
 
 
 Version 2.27
